2000-08-09  Mark Kettenis  <kettenis@gnu.org>

	* pf.c (S_socket_create): Only accept S_IFCHR, S_IFSOCK and
	S_IFIFO as `magic' protocols.

2000-08-02  Mark Kettenis  <kettenis@gnu.org>

	Add `magic' protocols to specify the file type of a sockets.  This
	allows implementation of POSIX pipes by using a S_IFSOCK protocol.
	* sock.h: Include <sys/types.h>.
	(struct sock): Add new member `mode'.
	(sock_create): Add new parameter `mode'.
	* sock.c (sock_create): Initialize `mode' member of struct sock,
	with new parameter.
	* pf.c (S_socket_create): Pass file type/mode to sock_create based
	on PROTOCOL.
	* io.c (S_io_stat): Use new member of `struct sock' to set
	ST->st_mode.

2000-07-26  Mark Kettenis  <kettenis@gnu.org>

	* Makefile (HURDLIBS): Reorder libs such that the threads lib
	comes before the ports lib.  This makes sure the functions in
	libthreads properly override the stubs in libports with the new
	dynamic linker semantics in glibc 2.2.

1999-09-13  Roland McGrath  <roland@baalperazim.frob.com>

	* io.c: Reverted changes related to io_map_segment.

1999-09-07  Thomas Bushnell, BSG  <tb@mit.edu>

	* io.c (S_io_map_segment): New function.

1999-07-11  Roland McGrath  <roland@baalperazim.frob.com>

	* sock.h: Add #include <sys/mman.h>.

1999-07-10  Roland McGrath  <roland@baalperazim.frob.com>

	* io.c: Add #include <sys/mman.h> for munmap decl.

1999-07-09  Thomas Bushnell, BSG  <tb@mit.edu>

	* pf.c (S_socket_whatis_address): Use mmap instead of vm_allocate.

1999-07-03  Thomas Bushnell, BSG  <tb@mit.edu>

	* io.c (TRASH_IDS): Use munmap instead of vm_deallocate.

1999-03-01  Mark Kettenis  <kettenis@gnu.org>

	* pf.c (S_socket_whatis_address): Implement.  Since we cannot tell
	what our adress is, return an empty string as the file name.

Tue Feb 16 05:52:35 1999  Thomas Bushnell, BSG  <tb@mit.edu>

	* io.c (S_io_revoke): New function.  Don't attempt to implement.
  	(Other systems don't even permit non-file revokes.)
