@@ -1,3 +1,10 @@
+2001-02-11  Marcus Brinkmann  <marcus@gnu.org>
+
+	* connq.c (connq_destroy): New function.
+	* connq.h: Prototype connq_destroy.
+	* sock.c (sock_free): Call connq_destroy when listen or connect
+	queue exist.
+
 2000-08-09  Mark Kettenis  <kettenis@gnu.org>
 
 	* pf.c (S_socket_create): Only accept S_IFCHR, S_IFSOCK and
